# bam2tensor

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: FUNDING.yml  rename_project.sh
bam2tensor/: __main__.py  base.py  cli.py
tests/: test_base.py
